2003-12-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/timidity.[ch]:
	  Support for voice LPF command line option

2003-12-04  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/readmidi.[ch], timidity/playmidi.c:
	  Fasten initialization of Insertion Effect.
	  Implement new LPF for System Effect.

2003-12-03  Saito <saito2@digitalme.com>

	* interface/w32g_res.rc:
	  Fix dialog around temperaments.
	* timidity/reverb.[ch], timidity/readmidi.c:
	  Implement new algorithm for Distortion and Overdrive effect.
	* timidity/mix.c:
	  Fix a comment.
	  
2003-12-02  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/mix.c:
	  Implement Moog VCF resonant lowpass filter; it sounds good, but slow.
	* timidity/mix.c:
	  Fix typo.

2003-12-01  Saito <saito2@digitalme.com>

	* timidity/playmidi.[ch], timidity/tables.[ch],
	  timidity/mix.c, timidity/sndfont.c:
	  Implement Chamberlin's resonant lowpass filter; it's faster but narrow band.

2003-11-30  Saito <saito2@digitalme.com>

	* timidity/readmidi.c, timidity/tables.[ch]:
	  Fix parameter-handling of Chorus Effect.

2003-11-28  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch]:
	  Fix around Chorus Effect.
	* timidity/playmidi.c:
	  Turn off opt_pan_delay in default.

2003-11-27  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/effect.c, timidity/readmidi.c:
	  Fix around GS Insertion Effect.

2003-11-24  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c:
	  Bug exposed by dynamic allocation of voice[] was fixed.

2003-11-22  Saito <saito2@digitalme.com>

	* interface/w32g_utl.c:
	  Fix typos.

2003-11-21  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/w32g_pref.c, interface/w32g_res.{h,rc},
	  interface/w32g_subwin3.c, interface/w32g_tracer.bmp:
	  Support for user-defined temperament (W32GUI version)

2003-11-19  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/ncurs_c.c, timidity/playmidi.[ch], timidity/readmidi.c: